--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
     <main>
 
         <!--Womens Jackets Container-->
-
+        <section class="">
         <h3 class="text-4xl font-bold mt-8 text-[#363958] mx-[95px] mb-[30px]">WOMAN JACKET</h3>
-        <div class=" h-[400px] grid grid-cols-3 gap-5 mr-[70px]">
+        <div class=" h-[400px] grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-5 mr-[70px]">
             <div class=" flex flex-col bg-white h-[590px] justify-between mx-[75px] py-[20px] px-[30px] rounded-lg w-[360px]">
                 <div class="w-[300px] h-[320px]  rounded-xl px-8 py-8 bg-gray-300">
                     <img src="jacket-1.png" alt="women winter yellow color stunning jacket" class=" rounded-xl w-80 -my-4">
@@ -112,12 +112,12 @@
                 </div>
             </div>
         </div>
-
+        </section>
         <!--Mans Jakect Container-->
 
         <section class="mt-52">
         <h3 class="  text-4xl font-bold mt-8 text-[#363958] mx-[95px] mb-[30px]">MAN JACKETS</h3>
-        <div class="  h-[400px] grid grid-cols-3 gap-5 mr-[70px]">
+        <div class="  h-[400px] grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-5 mr-[70px]">
             <div class=" flex flex-col bg-white h-[590px] justify-between mx-[75px] py-[20px] px-[30px] rounded-lg w-[360px]">
                 <div class="w-[300px] h-[320px]  rounded-xl px-8 py-8 bg-gray-300">
                     <img src="jacket-4.png" alt="women winter yellow color stunning jacket" class=" rounded-xl w-80 -my-4">
