make the nav responsive

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
 <style>
     .roboto-font{
-       font-family: Bebas+Neue;
+        font-family: 'Bebas Neue', sans-serif;
     }
     .man-jackets{
         margin-top: 50px;
@@ -23,24 +23,24 @@
 </style>
 </head>
 <body class="bg-[#FFF]">
-    <header class="w-full h-[535px] bg-[#FFFBF0] my-0 mx-auto px-24">
-        <nav class="flex  justify-between h-1/6  ">
-            <div class="h-5/11 w-[300px] mx-0 my-auto ">
-                <img src="logo.png" alt="logo">
+    <header class="w-full h-[535px] bg-[#FFFBF0] my-0 lg:mx-auto mx-5 lg:px-24">
+        <nav class="flex justify-between h-1/6  ">
+            <div class=" lg:h-5/11 w-[190px] ml-5 lg:w-[300px] mx-0 my-auto ">
+                <img src="logo.png" alt="logo" class="w-[250px]">
             </div>
-            <div>
-
+            <divc class=" my-auto mx-5 relative lg:hidden md:hidden text-2xl">
+                <i class="fa-solid fa-bars"></i>
             </div>
-            <ul class="list-none flex justify-evenly w-[600px] items-center text-[#3C3C3C] text-xl">
+            <ul class="list-none hidden md:flex lg:justify-evenly w-[600px] items-center text-[#3C3C3C] text-xl">
                 <li>Home</li>
                 <li>Product</li>
                 <li>About us</li>
                 <li>Contact us</li>
             </ul>
         </nav>
-        <div class="flex items-center justify-between gap-4 ">
+        <div class="flex flex-col items-center lg:justify-between gap-4 ">
             <div class=" flex gap-4 flex-col h-[360px] pt-[40px] ">
-                <h2 class="text-[50px] font-[400] font-[Bebas Neue] leading-[70px] bebas-neue"><span class="text-[#FABE4C]">Be the Penguins</span> <br>
+                <h2 class="text-[50px] font-[400] font-[Bebas Neue] leading-[70px] bebas-neue roboto-font "><span class="text-[#FABE4C]">Be the Penguins</span> <br>
                    <span class="text-[#363958]"> Of Winter</span></h2>
                 <p>Lorem Ipsum is simply dummy text of the printing 
                     and typesetting industry.</p>
